--- a/.github/workflows/Mcserver.yml
+++ b/.github/workflows/Mcserver.yml
@@ -1,14 +1,14 @@
-name: Minecraft
+name: Minecraft Server 14GB + Ngrok TCP + Auto World Backup
 
 on:
   workflow_dispatch:
 
 jobs:
-  server:
+  minecraft:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repo
+      - name: Checkout Code
         uses: actions/checkout@v3
 
       - name: Setup Java 17
@@ -24,42 +24,32 @@ jobs:
           curl -o server.jar https://launcher.mojang.com/v1/objects/e3adc06c47d2ef56cc55f01f2eeb2d0b68413545/server.jar
           echo "eula=true" > eula.txt
 
-      - name: Start Minecraft Server (14GB RAM)
+      - name: Start Minecraft Server in Background
         run: |
           cd server
           nohup java -Xmx14G -Xms2G -jar server.jar nogui > mc.log 2>&1 &
 
-      - name: Install Filebrowser
-        run: |
-          curl -fsSL https://raw.githubusercontent.com/filebrowser/get/master/get.sh | bash
-          nohup /usr/local/bin/filebrowser -r ./server -p 8080 > fb.log 2>&1 &
-
-      - name: Wait for Services
-        run: sleep 20
-
-      - name: Start Cloudflare Tunnel for Filebrowser
-        run: |
-          curl -fsSL https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64 -o cloudflared
-          chmod +x cloudflared
-          ./cloudflared tunnel --url http://localhost:8080
-
-      - name: Start Ngrok TCP Tunnel for Minecraft (25565)
+      - name: Install and Start Ngrok TCP Tunnel for port 25565
         run: |
           curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
           echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
           sudo apt update && sudo apt install ngrok -y
           ngrok config add-authtoken 2eotogA5R4KDNhGM3LPPec0uk9D_5JwsdDjfp5mbogqyAUepa
           nohup ngrok tcp 25565 > ngrok.log 2>&1 &
-          sleep 5
+          sleep 8
+          echo "==== NGROK PUBLIC ADDRESS ===="
           cat ngrok.log | grep -o "tcp://[0-9a-zA-Z\.\:]*"
 
-      - name: Auto Backup World to GitHub
+      - name: Keep Server Running
+        run: sleep 21500
+
+      - name: Auto Backup Minecraft World
         if: always()
         run: |
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
           git pull
           git add server/world || true
-          git commit -m "Auto-backup Minecraft world" || echo "No changes"
+          git commit -m "Auto-backup world after run" || echo "No changes"
           git push || echo "No push access"
           
