--- a/.github/workflows/Try1.yml
+++ b/.github/workflows/Try1.yml
@@ -1,43 +1,58 @@
-name: Cloudflare Tunnel Service
+name: HAProxy HTTP Proxy Tunnel
 
 on:
   workflow_dispatch:
 
 jobs:
-  tunnel:
+  haproxy-tunnel:
     runs-on: ubuntu-latest
     timeout-minutes: 360
 
     steps:
-      - name: Install Tinyproxy & Neofetch
+      - name: Install HAProxy & Tools
         run: |
           sudo apt update
-          sudo apt install -y tinyproxy neofetch curl
+          sudo apt install -y haproxy curl neofetch
 
-          # Configure Tinyproxy
-          sudo sed -i 's/^#Allow 127.0.0.1/Allow 0.0.0.0/' /etc/tinyproxy/tinyproxy.conf
-          sudo sed -i 's/^Allow.*/#Allow/' /etc/tinyproxy/tinyproxy.conf
-          sudo sed -i 's/^Bind.*/#Bind/' /etc/tinyproxy/tinyproxy.conf
-          echo "DisableViaHeader Yes" | sudo tee -a /etc/tinyproxy/tinyproxy.conf
-          echo "ConnectPort 80" | sudo tee -a /etc/tinyproxy/tinyproxy.conf
-          echo "ConnectPort 443" | sudo tee -a /etc/tinyproxy/tinyproxy.conf
+          # Configure HAProxy as forward HTTP proxy
+          cat <<EOF | sudo tee /etc/haproxy/haproxy.cfg
+          global
+              maxconn 2048
+              daemon
 
-          sudo service tinyproxy restart
+          defaults
+              mode http
+              timeout connect 5000ms
+              timeout client  50000ms
+              timeout server  50000ms
+
+          frontend http-in
+              bind *:8080
+              default_backend http-proxy
+
+          backend http-proxy
+              server proxy1 127.0.0.1:80
+          EOF
+
+          sudo systemctl restart haproxy
           neofetch || true
 
-      - name: Install cloudflared (.deb method)
+      - name: Install and Configure Ngrok
         run: |
-          wget https://github.com/cloudflare/cloudflared/releases/download/2025.4.0/cloudflared-linux-amd64.deb
-          sudo dpkg -i cloudflared-linux-amd64.deb || sudo apt -f install -y
+          curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
+          echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
+          sudo apt update && sudo apt install -y ngrok
 
-      - name: Start Cloudflare Tunnel
+      - name: Start Ngrok TCP Tunnel
+        env:
+          NGROK_AUTHTOKEN: 2eotogA5R4KDNhGM3LPPec0uk9D_5JwsdDjfp5mbogqyAUepa
         run: |
-          nohup cloudflared tunnel --url http://localhost:8888 > tunnel.log 2>&1 &
+          ngrok config add-authtoken "$NGROK_AUTHTOKEN"
+          nohup ngrok tcp 8080 > ngrok.log 2>&1 &
           sleep 10
-          echo "=== Cloudflare Tunnel URL ==="
-          grep -Eo "https://[a-zA-Z0-9.-]+\.trycloudflare\.com" tunnel.log | head -n 1 || echo "Tunnel URL not found."
+          echo "=== Ngrok Public TCP URL ==="
+          curl -s http://127.0.0.1:4040/api/tunnels | grep -E 'public_url|tcp'
 
-      - name: Keep Alive
+      - name: Keep Workflow Alive
         run: |
-          while sleep 60; do echo "Running..."; done
-          
+          while sleep 60; do echo "Proxy is active..."; done
